<resources>
    <string name="app_name">Doctor Persona</string>
    <string name="title_activity_doctor_login">Doctor Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_patient_login">Patient Login</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_doctor_dash">DoctorDash</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="exit">Exit</string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="search">Search</string>
    <string name="patient_id">Patient ID</string>
    <string name="title_activity_patient_dash">PatientDash</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="upcoming_appointments">Upcoming Appointments:</string>
    <string name="prescription">Prescription</string>
    <string name="make_appointments">Make appointment</string>
</resources>