<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall2"
    tools:context=".DoctorDash">


    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="51dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="Exit"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="242dp"
        android:layout_height="75dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="New"
        android:text="@string/create_new_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchButton" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="182dp"
        android:layout_height="66dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="115dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Search"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_editText" />

    <EditText
        android:id="@+id/Name_editText"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"

        android:drawablePadding="5dp"
        android:hint="@string/patient_id"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center_horizontal"
        android:text="@string/upcoming_appointments"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/NameData_textView"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="78dp"
        android:hint="Display name"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/TimeData_textView"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:hint="Display time"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameData_textView" />

    <TextView
        android:id="@+id/DateData_textView"
        android:layout_width="122dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="88dp"
        android:hint="Display date"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeData_textView" />

    <TextView
        android:id="@+id/ReasonData_textView"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:hint="Display reason"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateData_textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="115dp"
        android:gravity="center_horizontal"
        android:text="@string/patient_id"
        android:textColor="#3F53B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReasonData_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="171dp"
        android:layout_height="213dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="33dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>